# HamsterWheel

./: Cargo.toml  README.md  grammar.txt
src/: lib.rs  main.rs
src/file_walker/: file_walker.rs
src/interperter/: interperter.rs  mod.rs
src/interpreter/: importer.rs  interpreter.rs  interpreter_result.rs  loop_iterator.rs  mod.rs
src/parser/: mod.rs  parser.rs  scope.rs  var_type.rs
src/tokenizer/: tokenizer.rs
src/tree_nodes/: mod.rs  node.rs  tree_nodes.rs
templates/config_template/: configs.csv  configs.hamster_wheel  configs.json
templates/localization_template/: key_lang_localization.hamster_wheel  lang_key_localization.hamster_wheel  localizations.csv  output_key_lang.js  output_lang_key.js
